RAIN-6651 : Firenoc apk alignment issue fix in search screen fixed & PT bill details issue fixed  (#2319)
* RAIN-6608 : Billdetails array updated based on latest bills

* RAIN-6651 : Firenoc apk alignment issue fix in search screen fixed

--- a/frontend/mono-ui/web/rainmaker/dev-packages/egov-firenoc-dev/src/ui-config/screens/specs/fire-noc/index.scss
+++ b/frontend/mono-ui/web/rainmaker/dev-packages/egov-firenoc-dev/src/ui-config/screens/specs/fire-noc/index.scss
@@ -20,6 +20,11 @@
     div#custom-atoms-rightdiv {
       width: 100%;
     }
+    .firenoc-btn-search-reset{
+      div{
+        flex-basis: auto;
+      }  
+      }
   }
   
   @media only screen and (min-width: 768px) {
@@ -51,3 +56,4 @@
   }
   p[class^="MuiFormHelperText-root"] {
     font-size: 14px !important; }
+
